# Majiix

./: .gitignore  .prettierignore  README.md  hello  package-lock.json  package.json
.github/workflows/: hack.yml  verify.yml
architecture/: ARCHITECTURE.md
backend/: .env  Cargo.toml
backend/src/: env.rs  lib.rs  main.rs  wt.rs
backend/src/routes/: media.rs  mod.rs
backend/src/webtransport/: mod.rs
certs/: README.md  generate_certs.sh  install.sh  launch_brave.sh  launch_chrome.sh  localhost-key.pem.example  localhost-pem.key  localhost.crt  localhost.key  mkcert.sh  readme.md
encoder-player/: .env.development  package-lock.json  package.json  tsconfig.json  vite.config.ts
encoder-player/src/: Render.tsx
encoder-player/src/media-encoder/: audio_capture.ts  audio_encoder.ts  configs.ts  muxer_sender.ts  utils.ts
encoder-player/src/packager/: loc_packager.ts
encoder-player/src/routes/: index.tsx
encoder-player/src/utils/: buffer_utils.ts  moqt.ts  stream.ts
ffmpeg/: .gitignore  README.md  build.sh  install.sh
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: global.d.ts  root.css  root.tsx
frontend/src/components/: Render.css  Render.tsx
frontend/src/components/media-encoder/: audio_capture.ts  audio_encoder.ts  configs.ts  muxer_sender.ts  utils.ts  video_capture.ts  video_encoder.ts
frontend/src/media-encoder/: configs.ts  index.tsx
frontend/src/routes/: index.tsx
moq-server/: .env  .gitignore  Cargo.toml  package.json
moq-server/src/: lib.rs  logger.rs  room.rs
scripts/: localhost.crt.der  localhost.crt.pem  localhost.key.der  localhost.key.pem
