[package]
name = "moq-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "majiix"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = { version = "0.24.2", features = ["acceptor"] }
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.4"
h3-quinn = "0.0.4"
clap = { version = "4.4.8", features = ["derive"] }
lazy_static = "1.4.0"
bytes = "1.5.0"
http = "1.0.0"
url = "2.5.0"
urlencoding = "2.1.3"
uuid = "1.8.0"
time = "0.3.36"
regex = "1.10.4"
moq-transport = "0.5.1"
moq-relay = "0.4.0"
moq-native = "0.2.0"
moq-dir = { git = "https://github.com/kelvinkirima014/moq-rs" }
futures = "0.3.30"
web-transport = "0.3.0"
